# lingualive-pro

./: .env.example  .eslintrc.cjs  .gitignore  PROVIDERS_GUIDE.md  README.md  VARIABLE_PLAYBACK_SPEED.md  manifest.json  options.html  package-lock.json  package.json  start-backend.ps1  tsconfig.json  ΓΡΗΓΟΡΗ_ΕΚΚΙΝΗΣΗ.md  ΚΑΤΑΣΤΑΣΗ_ΕΡΓΟΥ.md  ΟΔΗΓΟΣ_ΧΡΗΣΗΣ.md  ΠΛΟΗΓΟΣ_ΤΕΚΜΗΡΙΩΣΗΣ.md  ΤΕΧΝΙΚΗ_ΤΕΚΜΗΡΙΩΣΗ.md
backend/: .env.example  google-credentials.example.json  pyproject.toml  requirements.txt  test_deepl.py
backend/app/: config.py  main.py
backend/app/api/: assemblyai_realtime.py  audio.py  deepgram_realtime.py  google_realtime.py  google_realtime_new.py  realtime.py  translate.py
backend/app/services/: advanced_optimizations.py  advanced_translation_refinements.py  asr_service.py  enhancement_service.py  realtime_service.py  translation_service.py
backend/tests/: test_health.py  test_translate.py
bugs/: index.csv  index.json
docs/: extension_dev_guide.md
extension/: manifest.json  options.html  package-lock.json  package.json  popup.html  tsconfig.json
src/: background.ts  options.ts
testsprite_tests/: TC-HUD-001_Load_persisted_HUD_position_on_page_reload.py  TC-HUD-002_Load_persisted_HUD_size_on_page_reload.py  TC-HUD-010_Drag_HUD_within_viewport_boundaries.py  TC-HUD-020_Resize_from_right_edge.py  TC-HUD-030_Minimize_HUD_to_header_pill.py  TC-HUD-032_Close_HUD.py  TC-HUD-040_Light_theme_rendering.py  TC-HUD-043_Theme_cycling_loop.py  TC-HUD-050_Header_buttons_have_aria_labels.py  standard_prd.json  testsprite_frontend_test_plan.json
(+16 files in other folders)
